  CHANGED: Konfigurator: MouseMode got now it's own Tab in Look&Feel
  CHANGED: Shortcut- and Toolbardialogs are removed from Konfigurator
  CHANGED: Shortcuts are now exported in as plaintext, legacy import still
           works.
  CHANGED: UserActions are now managed with ActionMan. In Konfigurator
           you can change settings _about_ useractions.

    FIXED: [ 1578768 ] Wrong sorting by Date column in search dialog
    FIXED: [ 1599142 ] problem with "Rename selects extension" and directories
    FIXED: wrong name after cancelling inplace rename by Esc
    FIXED: locate jumps onto the file after double click
    FIXED: When a refresh fails, the attempted URL is kept in the origin bar,
           and focus remains there for the user to fix. Idea by Vaclav Juza
    FIXED: TerminalEmulator didn't hide for all shortcuts
    FIXED: Konfigurator layout: should fit into 800x600 again
    FIXED: KeyDialog: alternative shortcuts are ex-/imported as well
    FIXED: KeyDialog: canceling the dialog undoes import
    FIXED: ActionMan: creating a new actions doesn't seem to modify the current
    FIXED: ActionMan: Save modifications on current action
    FIXED: [Debian: 378138] Changed the location of the .desktop-files to match
           freedesktop.org's standards
    FIXED: Useractions: outputcollections works again
    FIXED: inconsistences and possible memoryleaks in useractions
           (thanks to Jiri Palacek)
    FIXED: Nice shutdown at SIGTERM,SIGHUP,SIGQUIT (thanks toJiri Palacek)
    FIXED: QLayout warnings in ListPanel (patch by Jiri Palecek)
    FIXED: memory leaks in KRpermHandler (patch by Jiri Palecek)
    FIXED: shutdown bugs (thanks to Jiri Palacek)
    FIXED: const char * compiler warnings removed (patch by Jiri Palecek)
    FIXED: memory leaks in KrDetailedView (patch by Jiri Palecek)
    FIXED: terminal emulator sends the CD commands too frequently
    FIXED: terminal emulator scrolls up its content after hide/show